# rxn-onmt-utils

./: .buildinfo  .bumpversion.cfg  .travis.yml  README.html  README.md  api.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg
.github/workflows/: docs.yaml  pypi.yaml  tests.yaml
_modules/: index.html
_modules/rxn/onmt_utils/: internal_translation_utils.html  model_introspection.html  model_resize.html  strip_model.html  torch_utils.html  train_command.html  translator.html
_sources/: README.md.txt  api.rst.txt  index.md.txt
docs/source/: conf.py
src/rxn/onmt_utils/: __init__.py  internal_translation_utils.py  model_introspection.py  model_resize.py  strip_model.py  torch_utils.py  train_command.py  translate.py  translator.py
src/rxn/onmt_utils/scripts/: extend_model_with_vocab.py  strip_model.py  translate.py
