[metadata]
name = rxn-onmt-utils
version = attr: rxn.onmt_utils.__version__
description = Utilities related to the use of OpenNMT
author = IBM RXN team
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rxn4chemistry/rxn-onmt-utils
project_urls =
    Documentation = https://rxn4chemistry.github.io/rxn-onmt-utils/
    Repository = https://github.com/rxn4chemistry/rxn-onmt-utils
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >= 3.6
zip_safe = False
include_package_data = True
install_requires =
    attrs>=21.2.0
    click>=8.0
    rxn-opennmt-py>=1.1.1
    rxn-utils>=1.6.0

[options.packages.find]
where = src

[options.package_data]
rxn.onmt_utils =
    py.typed

[options.extras_require]
dev =
    black>=22.3.0
    bump2version>=1.0.1
    flake8>=3.8.4
    isort>=5.10.1
    mypy>=0.910
    types-setuptools>=57.4.14

[options.entry_points]
console_scripts =
    rxn-extend-model-with-vocab = rxn.onmt_utils.scripts.extend_model_with_vocab:main
    rxn-strip-opennmt-model = rxn.onmt_utils.strip_model:main

[flake8]
extend-ignore = E203, E501
